--- a/README.rdoc
+++ b/README.rdoc
@@ -41,9 +41,9 @@ This gem provides a mechanism for authenticating via Ex Libris' Patron Directory
 
 === Configure institutions
 
-== Create institution config file
+==== Create institution config file
 
-=== config/institutions.yml
+===== config/institutions.yml
   default:
     login:
       link_code: DEFAULT
@@ -51,12 +51,23 @@ This gem provides a mechanism for authenticating via Ex Libris' Patron Directory
 
 You can create multiple institution listings as follows
 
-  DEFAULT:
+===== config/institutions.yml
+  INST01:
     login:
-      link_code: DEFAULT
+      link_code: INST01
+    default: true
     display_name: My Institution
+  INST02:
+    login:
+      link_code: INST01
+    display_name: Your Institution
 
-== Create institution initializer
+==== Create institution initializer
+
+===== config/initializers/institutions.yml
+  InstitutionList.yaml_path= Rails.root + "config/institutions.yml"
+
+If you have your institutions.yml file in another location make sure to change the line above accordingly.
 
 === Mixin authpds methods into UserSessionsController
   class UserSessionsController < ApplicationController
